--- a/tools/hash-lookup/tool.yaml
+++ b/tools/hash-lookup/tool.yaml
@@ -1,6 +1,6 @@
 name: hash-lookup
 version: "1.0"
-description: "Online hash lookup via public databases (hashes.com, nitrxgen, hashtoolkit)"
+description: "Online hash lookup tool that queries public pre-cracked hash databases (hashes.com, nitrxgen, hashtoolkit) to instantly recover plaintext passwords from known hashes. Much faster than john/hashcat for common passwords — lookup takes seconds vs minutes/hours for offline cracking. Also provides hash type identification (MD5, SHA1, SHA256, SHA512, NTLM, MySQL, bcrypt) via pattern matching, and hash generation (MD5, SHA1, SHA256, SHA512, NTLM) for testing and verification. Pure Python — no external tools, requires network access."
 image: "ghcr.io/silicon-works/mcp-tools-hash-lookup:latest"
 image_size_mb: 100
 
@@ -23,14 +23,18 @@ resources:
 # Routing hints for tool selection
 routing:
   use_for:
-    - "hash cracking via online databases"
-    - "hash identification"
-    - "password hash lookup"
-    - "quick hash check"
+    - "instantly crack known password hashes via online database lookup"
+    - "identify unknown hash type format from hash string"
+    - "check if a hash has been previously cracked in public databases"
+    - "quick hash lookup before running slow offline cracking with john"
+    - "generate MD5 SHA1 SHA256 SHA512 NTLM hashes for testing"
+    - "batch lookup of multiple password hashes at once"
+    - "verify cracked passwords by comparing generated hashes"
   never_use_for:
-    - "offline brute-force cracking"
-    - "password spraying"
-    - "port scanning"
+    - "offline brute-force cracking (use john)"
+    - "password spraying or online brute-force (use hydra)"
+    - "cracking salted hashes (online databases don't have salted hashes)"
+    - "bcrypt scrypt argon2 hashes (too slow to precompute)"
   triggers:
     - "hash"
     - "crack"
@@ -39,94 +43,108 @@ routing:
     - "MD5"
     - "SHA"
     - "hash lookup"
+    - "identify hash"
+    - "what hash"
   prefer_over:
     - hydra  # For known hashes, lookup is faster than brute-force
 
 methods:
   lookup:
-    description: "Look up a hash in online databases"
-    when_to_use: "To quickly check if a hash has already been cracked online"
+    description: "Look up a single hash in public pre-cracked hash databases. Queries sources in order: (1) hashes.com API (best coverage, supports all hash types), (2) nitrxgen (MD5 only, fast), (3) hashtoolkit.com (HTML scraping). Returns immediately when the first source finds a match. These databases contain billions of pre-computed hash-to-plaintext mappings from rainbow tables and wordlist cracking. Only works for unsalted hashes (MD5, SHA1, SHA256, NTLM) — salted hashes ($6$, bcrypt, etc.) won't be found in online databases."
+    when_to_use: "The very first thing to try when you have unsalted password hashes — before running john or hashcat. Online lookup takes 1-3 seconds vs minutes/hours for offline cracking. Common scenario: extract MD5/SHA1/NTLM hashes from a database dump or web application, look them up here first, then crack the remaining unfound hashes with john. Works best for: simple MD5 hashes, NTLM hashes from Windows, SHA1 hashes from older applications. Won't work for: salted hashes (Linux /etc/shadow $6$..., bcrypt $2a$...), non-standard hash formats, or strong unique passwords."
     params:
       hash:
         type: string
         required: true
-        description: "Hash value to look up"
+        description: "Hash value to look up. Bare hex string only — no prefix, no 'user:' prefix, no salt. Examples: '5f4dcc3b5aa765d61d8327deb882cf99' (MD5 of 'password'), 'a94a8fe5ccb19ba61c4c0873d391e987982fbbd3' (SHA1). The hash is lowercased and trimmed automatically."
       hash_type:
         type: enum
         values: [auto, md5, sha1, sha256, ntlm]
         default: auto
-        description: "Hash type (auto-detect if not specified)"
+        description: "Hash type. 'auto' detects by length: 32 chars = MD5 or NTLM, 40 chars = SHA1, 64 chars = SHA256. Specifying the type doesn't change the lookup behavior much — it mainly helps with logging. Note: 32-char hashes are ambiguous between MD5 and NTLM (both are 32 hex chars)."
     returns:
       hash:
         type: string
-        description: "The hash that was looked up"
+        description: "The hash that was looked up (lowercased)"
       plaintext:
         type: string
-        description: "Cracked plaintext if found"
+        description: "Recovered plaintext password (null if not found)"
       source:
         type: string
-        description: "Source that returned the result"
+        description: "Database that returned the result ('hashes.com', 'nitrxgen', or 'hashtoolkit')"
       cracked:
         type: boolean
-        description: "Whether the hash was cracked"
+        description: "Whether the plaintext was found in any database"
+      hash_type:
+        type: string
+        description: "Detected or specified hash type"
 
   lookup_batch:
-    description: "Look up multiple hashes at once"
-    when_to_use: "To check multiple hashes quickly"
+    description: "Look up multiple hashes sequentially by calling the lookup method for each hash. Results are aggregated into cracked and not_found lists. Note: this is sequential (not parallel), so N hashes take N * 1-3 seconds. The not_found output is capped at 10 entries to avoid excessive output."
+    when_to_use: "When you have multiple hashes from a database dump and want to check all of them at once. Typical scenario: dump a users table with sqlmap, extract the password hash column, and batch-look up all hashes. More convenient than calling lookup repeatedly. For large batches (100+), this will take several minutes due to sequential API calls with rate limiting."
     params:
       hashes:
         type: array
         required: true
-        description: "List of hashes to look up"
+        description: "List of hash strings to look up. Each hash should be a bare hex string. Example: ['5f4dcc3b5aa765d61d8327deb882cf99', 'e99a18c428cb38d5f260853678922e03']. All hashes should be the same type."
       hash_type:
         type: enum
         values: [auto, md5, sha1, sha256, ntlm]
         default: auto
-        description: "Hash type for all hashes"
+        description: "Hash type for all hashes in the batch. Use 'auto' if you're unsure — detection is by length."
     returns:
       results:
         type: array
-        description: "Results for each hash"
+        description: "Full result for each hash (same fields as lookup: hash, plaintext, source, cracked)"
+      total:
+        type: integer
+        description: "Total number of hashes submitted"
       cracked_count:
         type: integer
-        description: "Number of hashes cracked"
+        description: "Number of hashes successfully recovered"
       not_found_count:
         type: integer
-        description: "Number of hashes not found"
+        description: "Number of hashes not found in any database"
 
   identify:
-    description: "Identify the type of a hash"
-    when_to_use: "When unsure what type of hash was extracted"
+    description: "Identify the type of a hash using pattern matching on hash length and format. Detection patterns: 32 hex chars = MD5 or NTLM (ambiguous), 40 hex chars = SHA1, 64 hex chars = SHA256, 128 hex chars = SHA512, *[40 hex] = MySQL 4.1+, $2a$/$2b$ prefix = bcrypt. Returns possible types with human-readable descriptions."
+    when_to_use: "When you find a hash and need to determine its type before cracking with john or looking it up. Common in pentesting: find a hash in a config file, database column, or web application source code and need to identify it. Note: 32-character hex hashes are ambiguous between MD5 and NTLM — use context to distinguish (Windows = NTLM, web app = usually MD5). For more definitive identification with john-specific format names, use john's identify method instead. This method is faster (no Docker container needed) and provides more user-friendly descriptions."
     params:
       hash:
         type: string
         required: true
-        description: "Hash to identify"
+        description: "Single hash to identify. Bare hex string, no prefix needed. For bcrypt, include the full '$2a$10$...' string. For MySQL, include the leading '*'."
     returns:
       possible_types:
         type: array
-        description: "Possible hash types"
+        description: "List of possible hash type names (e.g., ['md5', 'ntlm'] for 32-char hex)"
       descriptions:
         type: array
-        description: "Descriptions of each type"
+        description: "Human-readable descriptions of each type (e.g., 'MD5 - 128-bit hash, commonly used for passwords')"
+      length:
+        type: integer
+        description: "Length of the hash string"
 
   generate:
-    description: "Generate hash from plaintext (for testing/comparison)"
-    when_to_use: "To generate test hashes or verify cracked passwords"
+    description: "Generate a hash from plaintext using Python's hashlib. Supports MD5, SHA1, SHA256, SHA512, and NTLM (MD4 of UTF-16LE encoded input). Useful for testing and verification — generate a hash from a suspected plaintext and compare it to the target hash to confirm a match."
+    when_to_use: "Two main use cases: (1) Verify a cracked password — if you cracked 'password123' from a hash, generate the hash of 'password123' and compare to confirm. (2) Testing — generate known hashes for testing the lookup functionality. For NTLM hash generation: useful when you have a plaintext password and need the NTLM hash for pass-the-hash attacks with impacket."
     params:
       plaintext:
         type: string
         required: true
-        description: "Text to hash"
+        description: "Text to hash. The exact string will be hashed — no trimming or normalization. For NTLM, the string is UTF-16LE encoded before MD4 hashing (matching Windows behavior)."
       hash_type:
         type: enum
         values: [md5, sha1, sha256, sha512, ntlm]
         default: md5
-        description: "Hash algorithm to use"
+        description: "Hash algorithm. md5=MD5 (32 hex), sha1=SHA-1 (40 hex), sha256=SHA-256 (64 hex), sha512=SHA-512 (128 hex), ntlm=NTLM/MD4-UTF16LE (32 hex, Windows password hash format)."
     returns:
       plaintext:
         type: string
-        description: "Original plaintext"
+        description: "The original plaintext that was hashed"
       hash:
         type: string
-        description: "Generated hash"
+        description: "Generated hash as lowercase hex string"
+      hash_type:
+        type: string
+        description: "Hash algorithm used"
