--- a/tools/ike-scan/tool.yaml
+++ b/tools/ike-scan/tool.yaml
@@ -1,6 +1,6 @@
 name: ike-scan
 version: "1.1.0"
-description: "IKE/IPsec VPN enumeration for aggressive mode testing, transform discovery, PSK hash capture and cracking"
+description: "IKE/IPsec VPN enumeration and exploitation tool (wraps ike-scan and psk-crack). 6 methods: scan (detect IKE service on UDP 500), aggressive_mode (test group name + capture PSK hash), enumerate_transforms (discover encryption/auth methods), brute_group_names (parallel group name brute force with built-in wordlists), get_psk_hash (capture PSK hash for offline cracking), crack_psk (dictionary or brute force PSK cracking via psk-crack — john does NOT support IKE PSK format). Full IKEv1 main mode and aggressive mode support."
 image: "ghcr.io/silicon-works/mcp-tools-ike-scan:latest"
 image_size_mb: 150
 
@@ -15,13 +15,13 @@ capabilities:
 
 routing:
   use_for:
-    - "IKE enumeration"
-    - "IPsec VPN testing"
-    - "aggressive mode attack"
-    - "VPN group name brute force"
-    - "PSK hash capture"
-    - "PSK hash cracking"
-    - "port 500 UDP service"
+    - "detect IKE VPN service on UDP port 500 and identify vendor"
+    - "test IKE aggressive mode with group name to capture PSK hash"
+    - "brute force IKE VPN group names with built-in or custom wordlists"
+    - "capture IKE PSK hash for offline cracking from aggressive mode handshake"
+    - "crack captured IKE PSK hash with psk-crack dictionary or brute force"
+    - "enumerate IKE transforms to discover supported encryption and auth methods"
+    - "IPsec VPN penetration testing workflow from detection to credential recovery"
   never_use_for:
     - "SSL VPN testing"
     - "OpenVPN testing"
