--- a/tools/impacket/tool.yaml
+++ b/tools/impacket/tool.yaml
@@ -1,6 +1,6 @@
 name: impacket
 version: "0.12"
-description: "Windows/Active Directory exploitation toolkit for remote execution, credential dumping, Kerberos attacks, and SMB operations"
+description: "Windows/Active Directory exploitation toolkit (Impacket 0.12). 13 methods in 4 categories: remote execution (psexec, wmiexec, smbexec, dcomexec, atexec — 5 execution methods with different stealth/reliability tradeoffs), credential dumping (secretsdump — SAM, LSA, NTDS.dit via DRSUAPI or VSS), Kerberos attacks (kerberoast, asreproast, get_tgt), SMB operations (smb_shares, smb_get, smb_put), AD enumeration (get_ad_users, lookupsid). All methods support password, NTLM hash (pass-the-hash), Kerberos, and AES key authentication."
 image: "ghcr.io/silicon-works/mcp-tools-impacket:latest"
 image_size_mb: 900
 
