--- a/tools/metasploit/tool.yaml
+++ b/tools/metasploit/tool.yaml
@@ -1,6 +1,6 @@
 name: metasploit
 version: "6.4"
-description: "Exploitation framework with persistent sessions via msfrpcd"
+description: "Metasploit Framework v6.4 with persistent sessions via msfrpcd (RPC daemon). 9 methods: generate_payload (msfvenom for executables and shellcode), search_modules (find exploits/auxiliary/post modules), check_vuln (scanner module verification), run_exploit (execute exploit with session creation), exec_command (one-shot command execution via exploit), list_sessions (active meterpreter/shell sessions), session_command (run commands in sessions), post_module (post-exploitation modules), handler (multi/handler for reverse shells). Sessions persist across tool calls. Runs as a service container — msfrpcd stays running between calls."
 image: "ghcr.io/silicon-works/mcp-tools-metasploit:latest"
 image_size_mb: 3000
 
@@ -29,14 +29,14 @@ resources:
 # Routing hints for tool selection
 routing:
   use_for:
-    - "exploit module execution"
-    - "msfvenom payload generation"
-    - "vulnerability checking with metasploit"
-    - "meterpreter sessions"
-    - "post-exploitation modules"
-    - "persistent shell sessions via exploit"
-    - "execute commands through exploit on target"
-    - "reverse shell handler"
+    - "run Metasploit exploit module against a target"
+    - "generate msfvenom payloads for reverse shells or meterpreter"
+    - "check if target is vulnerable with Metasploit scanner module"
+    - "manage meterpreter or shell sessions on exploited targets"
+    - "run post-exploitation modules for credential gathering"
+    - "set up multi/handler to catch reverse shell connections"
+    - "search for Metasploit modules by CVE or service name"
+    - "execute commands through exploit without full session"
   never_use_for:
     - "port scanning"
     - "directory enumeration"
@@ -51,8 +51,8 @@ routing:
 
 methods:
   generate_payload:
-    description: "Generate a payload using msfvenom"
-    when_to_use: "To create reverse shells, meterpreter payloads, or encoded payloads"
+    description: "Generate a payload using msfvenom. Supports all Metasploit payloads (staged/stageless, meterpreter/shell) in multiple output formats (exe, elf, raw, python, php, asp, c, dll). Optional encoding with x86/shikata_ga_nai or other encoders for AV evasion. Returns the payload as base64."
+    when_to_use: "When you need a compiled payload binary for delivery to a target. Common payloads: 'windows/meterpreter/reverse_tcp' (staged Windows meterpreter), 'linux/x64/shell_reverse_tcp' (stageless Linux reverse shell), 'php/meterpreter/reverse_tcp' (PHP web shell). After generating, use handler to start a listener, then deliver the payload to the target. For simple text-based reverse shells (bash, python one-liners), use payload tool's revshell or exploit-runner's generate_payload instead."
     params:
       payload:
         type: string
@@ -128,8 +128,8 @@ methods:
         description: "Whether target appears vulnerable"
 
   run_exploit:
-    description: "Run an exploit module against a target"
-    when_to_use: "To exploit a confirmed vulnerability. Sessions persist across tool calls."
+    description: "Run an exploit module against a target. Sets RHOSTS, payload, LHOST, LPORT, and any additional options, then executes. Returns whether the exploit succeeded and any new sessions created. Sessions persist across tool calls — use list_sessions and session_command to interact with them."
+    when_to_use: "To exploit a confirmed vulnerability with a Metasploit module. Always run check_vuln first when available. Common exploit workflow: search_modules('ms17-010') → check_vuln with the auxiliary module → run_exploit with the exploit module. Provide lhost/lport for reverse payloads. Sessions opened by successful exploits persist in msfrpcd and can be accessed later via session_command."
     params:
       module:
         type: string
