--- a/tools/nikto/tool.yaml
+++ b/tools/nikto/tool.yaml
@@ -1,6 +1,6 @@
 name: nikto
 version: "2.5"
-description: "Web server vulnerability scanner that checks for 8000+ potentially dangerous files, outdated server versions (Apache, nginx, IIS, Tomcat), and server-level misconfigurations including insecure HTTP methods, default credentials, and known CVEs with OSVDB references"
+description: "Web server vulnerability scanner that checks for 6,900+ vulnerability tests (plus 6,200+ Drupal-specific and 1,800+ dictionary checks), outdated server versions (Apache, nginx, IIS, Tomcat), and server-level misconfigurations including insecure HTTP methods, default credentials, and known CVEs with OSVDB references"
 image: "ghcr.io/silicon-works/mcp-tools-nikto:latest"
 image_size_mb: 150
 
@@ -47,7 +47,7 @@ routing:
 
 methods:
   scan:
-    description: "Scan a web server for known vulnerabilities including outdated server software (Apache, nginx, IIS, Tomcat, lighttpd), dangerous default files (phpinfo.php, .git, .svn, server-status, server-info, backup files, database dumps), insecure HTTP methods (PUT, DELETE, TRACE, CONNECT), server misconfigurations (directory listing, default credentials, exposed admin consoles), and known CVEs with OSVDB cross-references. Uses a database of 8000+ checks organized by vulnerability category."
+    description: "Scan a web server for known vulnerabilities including outdated server software (Apache, nginx, IIS, Tomcat, lighttpd), dangerous default files (phpinfo.php, .git, .svn, server-status, server-info, backup files, database dumps), insecure HTTP methods (PUT, DELETE, TRACE, CONNECT), server misconfigurations (directory listing, default credentials, exposed admin consoles), and known CVEs with OSVDB cross-references. Uses a database of 6,900+ checks (plus 6,200+ Drupal-specific checks) organized by vulnerability category."
     when_to_use: "After discovering HTTP/HTTPS service on a port (from nmap) to check for server-level vulnerabilities like outdated server versions, dangerous default files, insecure HTTP headers, exposed admin interfaces, and known CVEs against the server software. Complements nuclei which focuses on template-based application-level CVE scanning. Use nikto for broad server-level checks and default file/misconfiguration discovery, nuclei for specific CVE verification, and zap for deep application-level active scanning."
     params:
       target:
