--- a/tools/payload/tool.yaml
+++ b/tools/payload/tool.yaml
@@ -1,6 +1,6 @@
 name: payload
 version: "1.0"
-description: "Payload compiler and generator for reverse shells, SUID binaries, and encoding"
+description: "Payload compiler and generator for reverse shells, SUID binaries, C compilation, and encoding. 6 methods: compile_c (GCC cross-compilation for x64/x86/ARM, static/stripped), suid_shell (setuid(0)+execve shell binary), revshell (one-liners in 8 languages: bash, python, nc, php, perl, ruby, powershell, socat with variants), list_shells (show all available reverse shell types), encode (base64/URL/double-URL/hex/unicode), decode. Does NOT require network — runs locally. For Metasploit msfvenom payloads, use metasploit generate_payload instead."
 image: "ghcr.io/silicon-works/mcp-tools-payload:latest"
 image_size_mb: 400
 
@@ -25,12 +25,11 @@ resources:
 # Routing hints for tool selection
 routing:
   use_for:
-    - "reverse shell generation"
-    - "payload compilation"
-    - "binary compilation"
-    - "SUID binary creation"
-    - "payload encoding"
-    - "shellcode generation"
+    - "generate reverse shell one-liners in bash python php perl ruby powershell"
+    - "compile C exploit source code to ELF binary"
+    - "create SUID shell binary for privilege escalation"
+    - "encode payloads in base64 URL hex or unicode for delivery"
+    - "cross-compile C code for x86 ARM or x64 targets"
   never_use_for:
     - "vulnerability scanning"
     - "port scanning"
@@ -46,8 +45,8 @@ routing:
 
 methods:
   compile_c:
-    description: "Compile C source code to an ELF binary"
-    when_to_use: "To compile custom exploits or SUID binaries"
+    description: "Compile C source code to an ELF binary using GCC. Supports x64, x86, and ARM architectures. Options for static linking (for targets without shared libraries) and symbol stripping (smaller binary, harder to reverse). Returns the compiled binary as base64 or hex."
+    when_to_use: "To compile kernel exploits, privilege escalation exploits, or custom C code for a target. Typical workflow: get exploit source from searchsploit → compile_c with static=true for portability → upload to target via ssh upload_binary → execute. Use arch='x86' for 32-bit targets, 'arm' for embedded/IoT."
     params:
       source:
         type: string
@@ -106,8 +105,8 @@ methods:
         description: "Binary size in bytes"
 
   revshell:
-    description: "Generate a reverse shell payload"
-    when_to_use: "To create reverse shell one-liners for various languages"
+    description: "Generate a reverse shell one-liner in 8 languages: bash (tcp/pty/mkfifo variants), python, nc (traditional/mkfifo), php, perl, ruby, powershell, socat. Supports encoding (base64, URL, double-URL) for delivery through injection points."
+    when_to_use: "When you have RCE and need a reverse shell payload in a specific language available on the target. Choose based on what's installed: bash (most Linux), python (if Python installed), php (PHP web servers), powershell (Windows). Use encode=base64 to avoid special character issues in injection. Start a listener (netcat listen or metasploit handler) BEFORE delivering the payload."
     params:
       lhost:
         type: string
