--- a/tools/playwright/tool.yaml
+++ b/tools/playwright/tool.yaml
@@ -1,6 +1,6 @@
 name: playwright-mcp
 version: "latest"
-description: "Browser automation for complex web interactions, JavaScript-rendered pages, and form filling"
+description: "Browser automation via Microsoft @playwright/mcp for complex web interactions, JavaScript-rendered pages, form filling, and CAPTCHA solving. 27+ methods in 8 categories: navigation (navigate, navigate_back), page state (snapshot for element refs, screenshot), interaction (click, hover, type, fill_form, select_option, file_upload, press_key, drag), JavaScript (evaluate, run_code), monitoring (network_requests, console_messages), vision mode (mouse_click_xy, mouse_move_xy, mouse_drag_xy for coordinate-based CAPTCHA interaction), verification (verify_element_visible, verify_text_visible, verify_list_visible, verify_value), evidence (start_tracing, stop_tracing, pdf_save). Chrome headless with VNC access at http://localhost:6080/vnc.html for human CAPTCHA solving. Can proxy through ZAP for vulnerability scanning."
 source: "https://github.com/microsoft/playwright-mcp"
 image: "ghcr.io/silicon-works/mcp-tools-playwright:latest"
 image_size_mb: 1500
