--- a/tools/scapy/tool.yaml
+++ b/tools/scapy/tool.yaml
@@ -1,6 +1,6 @@
 name: scapy
 version: "2.5"
-description: "Packet crafting and protocol testing for UDP, custom protocols, raw sockets, and network manipulation"
+description: "Packet crafting and low-level network testing via Scapy 2.5. 8 methods: udp_send (send/receive UDP packets), udp_probe (UDP service discovery with protocol-specific probes), tcp_syn (SYN scan single port), icmp_ping (ICMP echo), dns_query (DNS lookups with A/AAAA/MX/NS/TXT/SOA/ANY types), craft_packet (custom TCP/UDP/ICMP with hex payloads and TCP flags), arp_scan (local network host discovery with MAC addresses), snmp_get (SNMP community string testing). Requires NET_RAW and NET_ADMIN capabilities for raw socket access."
 image: "ghcr.io/silicon-works/mcp-tools-scapy:latest"
 image_size_mb: 200
 
@@ -15,14 +15,14 @@ capabilities:
 
 routing:
   use_for:
-    - "UDP protocol testing"
-    - "custom packet crafting"
-    - "raw socket operations"
-    - "ARP scanning"
-    - "DNS queries"
-    - "SNMP community testing"
-    - "protocol fuzzing"
-    - "network layer testing"
+    - "send and receive UDP packets for protocol testing and service interaction"
+    - "probe UDP ports with service-specific payloads for service discovery"
+    - "craft custom TCP UDP or ICMP packets with specific flags and hex payloads"
+    - "ARP scan local network to discover hosts and MAC addresses"
+    - "DNS query with specific record types (A, MX, NS, TXT, SOA, ANY)"
+    - "test SNMP community strings against target devices"
+    - "protocol fuzzing with raw socket packet crafting"
+    - "single-port TCP SYN check when full nmap scan is overkill"
   never_use_for:
     - "HTTP requests (use curl)"
     - "port scanning (use nmap)"
