--- a/tools/target-tracker/tool.yaml
+++ b/tools/target-tracker/tool.yaml
@@ -1,6 +1,6 @@
 name: target-tracker
 version: "1.0"
-description: "Track target state, credentials, vulnerabilities, and attack history throughout a penetration test"
+description: "Track target state throughout a penetration test engagement. 17 methods in 6 categories: targets (add_target, get_target, list_targets), ports/services (add_port), credentials (add_credential, update_credential, get_credentials), vulnerabilities (add_vulnerability, update_vulnerability), sessions (add_session, remove_session), loot (add_loot), attacks (record_attack, get_attack_history), ownership (mark_owned), notes (add_note), reporting (get_summary, suggest_next_steps). In-memory state persists across calls within a single container session. Does NOT require network — runs locally."
 image: "ghcr.io/silicon-works/mcp-tools-target-tracker:latest"
 image_size_mb: 80
 
@@ -14,12 +14,14 @@ capabilities:
 
 routing:
   use_for:
-    - "track discovered ports and services"
-    - "store credentials found during enumeration"
-    - "record vulnerability discoveries"
-    - "log attack attempts and results"
-    - "track session state"
-    - "get suggested next steps"
+    - "track discovered ports and services on target hosts during enumeration"
+    - "store and manage credentials found during penetration test (passwords, hashes, SSH keys)"
+    - "record discovered vulnerabilities with CVE and severity for reporting"
+    - "log attack attempts and results to avoid retesting and track progress"
+    - "register active shell and SSH sessions on exploited targets"
+    - "record retrieved loot (flags, config files, database dumps, SSH keys)"
+    - "mark target as owned at user or root level"
+    - "get engagement summary and suggested next steps based on current state"
   never_use_for:
     - "actual scanning or exploitation"
     - "credential testing"
