--- a/tools/web-session/tool.yaml
+++ b/tools/web-session/tool.yaml
@@ -1,6 +1,6 @@
 name: web-session
 version: "1.0"
-description: "Web session state management for authenticated testing"
+description: "Web session state management for authenticated security testing. 7 methods: login (POST form login and capture session cookies), get_cookies (retrieve stored cookies in header/dict/raw format for use with other tools), set_cookies (import cookies from browser or other source), request (make authenticated HTTP requests with stored session), list_sessions (show all stored sessions), extract_csrf (extract CSRF tokens from pages via regex), delete_session (cleanup). Named sessions persist across calls within a container session. Cookies can be exported as header strings for curl, ffuf, sqlmap, etc."
 image: "ghcr.io/silicon-works/mcp-tools-web-session:latest"
 image_size_mb: 100
 
@@ -25,12 +25,12 @@ resources:
 # Routing hints for tool selection
 routing:
   use_for:
-    - "authenticated web testing"
-    - "session cookie management"
-    - "CSRF token extraction"
-    - "logged-in requests"
-    - "web authentication"
-    - "cookie-based access"
+    - "login to web application and capture session cookies for reuse across tools"
+    - "store and manage authenticated session cookies for multi-step web testing"
+    - "extract CSRF tokens from web pages for form submission attacks"
+    - "make authenticated HTTP requests using stored session cookies"
+    - "export session cookies as header string for curl ffuf sqlmap and other tools"
+    - "import cookies from browser or Playwright session for use in CLI tools"
   never_use_for:
     - "unauthenticated scanning"
     - "port scanning"
