--- a/tools/zap/tool.yaml
+++ b/tools/zap/tool.yaml
@@ -1,6 +1,6 @@
 name: zap
 version: "2.14"
-description: "OWASP ZAP - web application security scanner with active vulnerability detection, spidering, and automated testing"
+description: "OWASP ZAP 2.14 web application security scanner. 12 methods: spider (crawl to discover URLs), active_scan (test for SQLi, XSS, OWASP Top 10), quick_scan (spider + active scan combined), ajax_spider (Chrome headless for JavaScript-heavy SPAs), stop_scan, get_alerts (vulnerability details by severity), get_urls, scan_status, summary, proxy_history (captured HTTP traffic like Burp), send_request (manual HTTP like Burp Repeater), proxy_info (proxy settings for Playwright integration). Runs as a service container with persistent state. Can proxy Playwright browser traffic for combined JS app testing."
 image: "ghcr.io/silicon-works/mcp-tools-zap:latest"
 image_size_mb: 1200
 
@@ -15,13 +15,13 @@ capabilities:
 # Routing hints for tool selection
 routing:
   use_for:
-    - "web application scanning"
-    - "active vulnerability scanning"
-    - "finding XSS vulnerabilities"
-    - "finding SQL injection"
-    - "automated web security testing"
-    - "crawling web applications"
-    - "OWASP Top 10 testing"
+    - "automated web application vulnerability scanning for OWASP Top 10"
+    - "active scan to find XSS SQL injection and other web vulnerabilities"
+    - "spider crawl web application to discover all pages and API endpoints"
+    - "crawl JavaScript SPA applications with ajax spider Chrome headless"
+    - "intercept and replay HTTP requests like Burp Suite Repeater"
+    - "proxy Playwright browser traffic through ZAP for JS-heavy app testing"
+    - "get vulnerability report with severity levels after web application scan"
   never_use_for:
     - "port scanning"
     - "network scanning"
