--- a/tools/searchsploit/tool.yaml
+++ b/tools/searchsploit/tool.yaml
@@ -1,6 +1,6 @@
 name: searchsploit
 version: "latest"
-description: "Search ExploitDB for public exploits and vulnerability information"
+description: "Offline search of the Exploit Database (exploit-db.com) using the searchsploit CLI. Contains 45,000+ public exploits, shellcodes, and security papers indexed locally — no network required. Searches exploit titles and file paths with fuzzy version range matching (e.g., '2.4' matches '2.0 < 2.5'). Supports JSON output parsing, CVE-based search (--cve), exact matching, and full exploit source code retrieval. Exploit code is stored at /usr/share/exploitdb/exploits/. Includes the full ExploitDB mirror."
 image: "ghcr.io/silicon-works/mcp-tools-searchsploit:latest"
 image_size_mb: 500
 
@@ -19,54 +19,73 @@ resources:
   memory_mb: 256
   cpu: 0.5
 
-# Routing hints for tool selection (added for Doc 22 Phase 1)
+# Routing hints for tool selection
 routing:
   use_for:
-    - "find exploit for CVE"
-    - "search exploitdb"
-    - "known vulnerability exploit"
-    - "public exploit"
-    - "exploit database search"
+    - "find public exploits for a software version or CVE"
+    - "search ExploitDB for known vulnerabilities"
+    - "find exploit code for Apache Nginx WordPress Drupal"
+    - "search for privilege escalation exploits by kernel version"
+    - "look up CVE exploit availability"
+    - "find remote code execution exploits for identified services"
+    - "retrieve exploit source code by EDB-ID"
+    - "check if a service version has known exploits"
   triggers:
     - "CVE-\\d{4}-\\d+"
     - "exploit.*search"
     - "searchsploit"
+    - "exploitdb"
+    - "find exploit"
+    - "known exploit"
   never_use_for:
-    - "writing custom exploits"
-    - "payload generation"
+    - "writing custom exploits (use exploit-runner)"
+    - "payload generation (use payload tool)"
+    - "active vulnerability scanning (use nuclei or nmap vuln)"
 
 methods:
   search:
-    description: "Search ExploitDB for exploits matching a query"
-    when_to_use: "After identifying a service version to find known exploits"
+    description: "Search the local ExploitDB mirror (45,000+ entries) for exploits matching query terms. Uses searchsploit with --json output. By default, performs case-insensitive AND matching across all terms with fuzzy version range detection (e.g., searching '2.4' will match entries for '2.0 < 2.5'). Parses JSON output into structured results with EDB-ID, title, path, date, and type (exploit/shellcode/paper). Search terms are split on spaces and matched independently — word order doesn't matter."
+    when_to_use: "After service_scan identifies service versions (e.g., 'Apache httpd 2.4.49', 'OpenSSH 7.2p2', 'ProFTPD 1.3.5'). The standard workflow is: nmap service_scan → searchsploit with the product and version. Search tips: (1) Use product name + version: 'apache 2.4.49', not 'Apache httpd 2.4.49 Ubuntu'. (2) Start broad, then narrow: first 'apache 2.4', then 'apache 2.4.49' if too many results. (3) For Windows: search by MS bulletin 'ms17-010' or KB number. (4) For kernels: 'linux kernel 5.4' or 'linux privilege escalation'. (5) Use exact=true for precise version matching when fuzzy results are too broad. (6) Filter by type='exploit' to exclude papers and shellcodes. After finding relevant results, use get_exploit to retrieve the exploit source code."
     params:
       query:
         type: string
         required: true
-        description: "Search terms (e.g., 'apache 2.4', 'wordpress 5.0', 'ms17-010')"
+        description: "Space-separated search terms. Each term must appear in the exploit title or path. Examples: 'apache 2.4.49' (product + version), 'wordpress 5.0' (CMS + version), 'linux kernel 5.4 privilege' (kernel + version + type), 'ms17-010' (MS bulletin), 'eternalblue' (exploit name), 'ssh' (service). Fewer, more specific terms give better results."
       exact:
         type: boolean
         default: false
-        description: "Perform exact match search"
+        description: "Exact order match on exploit title (searchsploit --exact). With exact=false (default), terms are matched independently in any order with fuzzy version ranges. With exact=true, the query string must appear exactly as-is in the title. Use exact=true when default search returns too many irrelevant results."
       type:
         type: enum
         values: [all, exploit, shellcode, paper]
         default: all
-        description: "Type of results to return"
+        description: "Filter by result type. 'exploit' = working exploit code (Python, C, Ruby, etc.), 'shellcode' = standalone shellcode (assembly, machine code), 'paper' = writeups and advisories (no exploit code). Use 'exploit' for actionable results."
     returns:
       results:
         type: array
-        description: "Matching exploits with ID, title, and path"
+        description: "Matching entries, each with: id (EDB-ID number), title (exploit description), path (local file path under /usr/share/exploitdb/), date (publication date), type ('exploit', 'shellcode', or 'paper')"
+      count:
+        type: integer
+        description: "Number of matching results"
+      query:
+        type: string
+        description: "The search query that was used"
 
   get_exploit:
-    description: "Get the content of a specific exploit by ID or path"
-    when_to_use: "To retrieve exploit code for manual review or execution"
+    description: "Retrieve the full source code of an exploit by its EDB-ID number or file path. Uses 'searchsploit -p ID' to resolve the exploit ID to a local file path (/usr/share/exploitdb/exploits/...), then reads the file. Exploit code can be Python, C, Ruby, PHP, Perl, shell script, or text. The full content is returned for review before use."
+    when_to_use: "After search identifies a relevant exploit, use this to retrieve its source code. Review the code to understand: (1) what it does, (2) what parameters it needs (target IP, port, paths), (3) whether it needs compilation or modification, (4) any dependencies. For Python exploits: may need to be adapted and run via exploit-runner. For C exploits: need compilation (gcc). For Metasploit modules (Ruby): use the metasploit tool instead. Always review exploit code before execution — public exploits may contain backdoors or be unreliable."
     params:
       exploit_id:
         type: string
         required: true
-        description: "Exploit ID number or path from search results"
+        description: "Either the EDB-ID number (e.g., '50383', '39446') from search results, or the full file path (e.g., '/usr/share/exploitdb/exploits/linux/remote/50383.py'). EDB-ID is preferred — the tool resolves it to the full path automatically."
     returns:
+      exploit_id:
+        type: string
+        description: "The exploit ID that was requested"
+      path:
+        type: string
+        description: "Full local path to the exploit file"
       content:
         type: string
-        description: "Exploit source code"
+        description: "Complete exploit source code as text"
